--- a/article/templates/articles/detail.html
+++ b/article/templates/articles/detail.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
+{% block header %}
+<a href="{% url 'home' %}">Home</a>
 
+{% endblock %}
 {% block content %}
   <h1>{{ article.title }}</h1>
   <p>{{ article.content }}</p>
