--- a/article/templates/articles/list.html
+++ b/article/templates/articles/list.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
+{% block header %}
+<a href="{% url 'home' %}">Home</a>
 
+{% endblock %}
 {% block content %}
   <h1>Article List</h1>
   {% for article in articles %}
