--- a/article/templates/contact/form.html
+++ b/article/templates/contact/form.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
+{% block header %}
+<a href="{% url 'home' %}">Home</a>
 
+{% endblock %}
 {% block content %}
   <h1>Contact Form</h1>
   <form method="post" action="{% url 'contact' %}">
